# nu-hist

./: .prettierrc.json  Cargo.toml  history.sqlite3  history.sqlite3-shm  history.sqlite3-wal  nothing.sqlite3  readme.md
src/: lib.rs  main.rs
